# turyn

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  IDEAS.md  IMPROVE.md  LICENSE  MDD-IDEAS.md  README.md  REFACTOR-BLOCKERS.md  SPEC.md  TICK-PROMPT.md  best-search-plan.md  claude-math-notes.md  codex-math-notes.md  known_solutions.txt  math-ideas.md  toc-ideas.md
benches/: fixed_work_criterion.rs  turyn_bench.rs
conjectures/: positive-tuple.md  xy-product-proof.md  xy-product.md  zw-u-bound-tight.md
data/: README.md  known-counts.txt  turyn-32.txt  turyn-type-06  turyn-type-08  turyn-type-18  turyn-type-22  turyn-type-24  turyn-type-26  turyn-type-32
docs/: BENCHMARKING-PROTOCOL-RESULTS.md  BENCHMARKING.md  CANONICAL.md  DATA_ANALYSIS.md  GIT_WORKFLOW.md  INSIDE-OUT-MDD.md  MDD-OPTIMIZATION-LOG.md  OPTIMIZATION_LOG.md  PIPELINE.md  PROFILING.md  REBENCH-TRACKER.md  TELEMETRY.md  TTC-ACCURACY-MEASUREMENT.md  TTC-CALIBRATION.md  TTC-QUEUE-THEORY.md  TTC.md  UNIFIED_SEARCH_FRAMEWORK_SPEC.md  benchmark-sat.md  pipeline-flow.html
lean/: .gitignore  Challenge.lean  Proofs.lean  README.md  Results.lean  StepsPlan.md  Turyn.lean  comparator-config.json  lake-manifest.json  lakefile.lean  lakefile.toml
radical/: Cargo.toml  README.md
scripts/: aggregate-results.py  analyze_middles.py  aristotle_mcp.py  bench-n14.sh  bench-pair-core.sh  bench-pair-n56.sh  bench-pair.sh  explore_infix_dedup.py  paired-stats.py  run-all-candidates.sh
src/: config.rs  enumerate.rs  legacy_search.rs  lib.rs  main.rs  mdd.rs  mdd_bfs.rs  mdd_pipeline.rs  mdd_reorder.rs  mdd_zw_first.rs  (+7 more)
(+49 files in other folders)
