[workspace]
members = [".", "radical"]

[package]
name = "turyn"
version = "0.1.0"
edition = "2024"
default-run = "turyn"

[features]
cadical = ["dep:cadical"]

[dependencies]
rustfft = "6"
realfft = "3"
radical = { path = "radical" }
cadical = { version = "0.1", optional = true }
rustc-hash = "2"
redb = "4.0.0"
rayon = "1.11.0"
dashmap = "6"
